--- a/index.html
+++ b/index.html
@@ -74,9 +74,40 @@
       </div>
 
       <button class="back-btn" id="back-button">⟵ Voltar</button>
+      <button id="to-music-button">Ir para nossa música 🎧</button>
+    </div>
+
+    <!-- TELA 3 - MÚSICA ESPECIAL -->
+    <div id="music-screen" class="hidden">
+      <h2>Nossa música 🎧💘</h2>
+
+      <div class="music-container">
+        <img
+          src="/img/foto4.jpeg"
+          alt="Nossa foto especial"
+          class="music-photo"
+        >
+
+        <div class="music-message">
+          <span class="mini-title">Pra você, Victória 💕</span>
+          <p>
+            Toda vez que essa música toca, eu lembro da sorte que eu tenho de ter você.
+            Obrigado por ser a trilha sonora mais linda da minha vida. 💓
+          </p>
+        </div>
+
+        <button id="music-play-button" class="music-play-btn">
+          ▶️ Tocar nossa música
+        </button>
+      </div>
+
+      <button class="back-btn" id="back-from-music">⟵ Voltar para as fotos</button>
     </div>
 
   </div>
+
+  <!-- Áudio da música -->
+  <audio id="love-song" src="/audio/meuamor.mp4"></audio>
 
   <script src="/js/index.js"></script>
 </body>
