--- a/index.html
+++ b/index.html
@@ -125,7 +125,24 @@
       <p id="puzzle-message">Clique em duas peças para trocar.</p>
 
       <button id="shuffle-puzzle">Embaralhar 🔄</button>
+      <button id="to-memory-button">Ir para o jogo da memória 🧠</button>
       <button class="back-btn" id="back-from-puzzle">⟵ Voltar para a música</button>
+    </div>
+
+    <!-- TELA 5 - JOGO DA MEMÓRIA COM FOTOS -->
+    <div id="memory-screen" class="hidden">
+      <h2>Jogo da memória do nosso amor 💭💘</h2>
+
+      <p id="memory-message">
+        Encontre todos os pares dos nossos momentos. Clique em duas cartas por vez. 💞
+      </p>
+
+      <div id="memory-grid" class="memory-grid">
+        <!-- As cartas são criadas via JavaScript -->
+      </div>
+
+      <button id="restart-memory">Jogar de novo 🔁</button>
+      <button class="back-btn" id="back-from-memory">⟵ Voltar para o quebra-cabeça</button>
     </div>
 
   </div>
